--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ https://github.com/don/BluetoothSerial
 -->
 <html>
     <head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -17,7 +18,10 @@ https://github.com/don/BluetoothSerial
         <h1>Bluetooth Test</h1>
         <div id="fraArduino"></div>
         <div id="statusDiv"></div>
-		<button type="button"  onclick = "sendToArduino('t')"> T&aelignd </button>
-		<button type="button"  onclick = "sendToArduino('s')"> Sluk </button>
+		<button type="button"  onclick = "sendToArduino('forward')"> Fremad </button>
+		<button type="button"  onclick = "sendToArduino('backward')"> Baglæns </button>
+		<button type="button"  onclick = "sendToArduino('right')"> Højre </button>
+		<button type="button"  onclick = "sendToArduino('left')"> Venstre </button>
+		
     </body>
 </html>
