--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@ https://github.com/don/BluetoothSerial
         <h1>Bluetooth Test</h1>
         <div id="fraArduino"></div>
         <div id="statusDiv"></div>
-		<button type="button"  onclick = "sendToArduino('forward')"> Fremad </button>
-		<button type="button"  onclick = "sendToArduino('backward')"> Baglæns </button>
-		<button type="button"  onclick = "sendToArduino('right')"> Højre </button>
-		<button type="button"  onclick = "sendToArduino('left')"> Venstre </button>
+		<button type="button"  onclick = "sendToArduino('f')"> Fremad </button>
+		<button type="button"  onclick = "sendToArduino('b')"> Baglæns </button>
+		<button type="button"  onclick = "sendToArduino('r')"> Højre </button>
+		<button type="button"  onclick = "sendToArduino('l')"> Venstre </button>
 		
     </body>
 </html>
