--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ https://github.com/don/BluetoothSerial
 		<button type="button"  onclick = "sendToArduino('b')"> Baglæns </button>
 		<button type="button"  onclick = "sendToArduino('r')"> Højre </button>
 		<button type="button"  onclick = "sendToArduino('l')"> Venstre </button>
+		<button type="button"  onclick = "sendToArduino('s')"> Stop </button>
 		
     </body>
 </html>
