--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@ https://github.com/don/BluetoothSerial
        
         <title>Bluetooth Test</title>
     </head>
+		<!--Denne del af app'en kommunikere med arduinoen og vores JS. 
+		Vi benytter værdien på knapperne i vores arduino funktion (modtagFraBluetooth()) -->
     <body onload="onLoad()">
         <h1>Bluetooth Test</h1>
         <div id="fraArduino"></div>
